src/convoworks/services/services.scss
.convoworks {

    .services {
        display: flex;
        flex-flow: column nowrap;
    
        padding: 34px 70px;

        max-width: none !important;

        & > .title {
            display: flex;
            flex-flow: row nowrap;
        
            align-items: center;
            margin-bottom: 49px;

            & > h3 {
                margin: 0;
            }

            & > .actions {
                margin: 0 40px 0 auto;
                width: 600px;

                display: flex;
                flex-flow: row nowrap;

                justify-content: space-around;
                align-content: center;

                & > button {
                    border-top-right-radius: 0;
                    border-bottom-right-radius: 0;
                }
                
                & > select {
                    border-radius: 0;
                }

                & > .search {
                    border-top-left-radius: 0;
                    border-bottom-left-radius: 0;
                    margin-left: -1px;
                    width: 900px;
                    font-family: "DM Sans", "Glyphicons Halflings", sans-serif;
                }
            }

            & > .actions, & > a.btn {
                height: 40px;
            }
        }

        & > .skill-list {
            width: 100%;
        
            border-collapse: separate;

            & > thead {
                color: rgba(0,0,0,0.5);

                & > tr {
                    & > th {
                        padding: 0 0 20px 30px;
                    }
                }
            }

            & > tbody {
                & > tr.divider {
                    background-color: transparent;
                    height: 8px;
                }

                & > tr.service-data {
                    height: 60px;
                    line-height: 60px;
                
                    border-radius: 8px;
                
                    margin: 8px 0;

                    & > td {
                        padding: 15px 30px;

                        &:first-of-type {
                            border-top-left-radius: 8px;
                            border-bottom-left-radius: 8px;
                        }

                        & > span.release-badge {
                            line-height: normal;
                            white-space: nowrap;

                            border-radius: 4px;

                            margin: 2px 6px;
                            padding: 10px 16px;

                            & .alias {
                                display: inline-block;

                                width: 20px;
                                height: 20px;
                                text-align: center;

                                margin-right: 4px;
                                border-radius: 50%;
                            }

                            &.review {
                                background-color: rgba(244, 154, 3, 0.1);
                                color: #f49a03;

                                & .alias {
                                    background-color: #F49A03;
                                    color: #fef5e5;
                                }
                            }

                            &.develop {
                                background-color: rgba(47,116,234,0.1);
                                color: #2F74EA;

                                & .alias {
                                    background-color: #2F74EA;
                                    color: #E9F1FD;
                                }
                            }

                            &.release {
                                background-color: rgba(13,190,38,0.1);
                                color: #0DBE26;

                                & .alias {
                                    background-color: #0DBE26;
                                    color: #e6f9e9;
                                }
                            }
                        }
                    }

                    & > td, & > td:last-child {
                        border-top-right-radius: 8px;
                        border-bottom-right-radius: 8px;
                    }
                }
            }
        }
    }

    .modal .report {
        padding: 1em 1.25em;

        .successes, .warnings, .errors {
            list-style: none;
            padding: 0;

            border-radius: 4px;

            list-style: none;
            
            li {
                position: relative;

                border-radius: 4px;

                span {
                    padding-left: 6px;
                    position: relative;
                    overflow: hidden;

                    color: white;
                    display: inline-block;

                    width: 100%;
                    min-height: 60px;

                    font-size: 14px;

                    hr {
                        margin: 4px 0;
                    }
                    
                    i {
                        position: absolute;
                        top: 0;
                        left: 0;
                        width: 60px;
                        height: 60px;
                        font-size: 60px;
                        opacity: 0.1;
                    }
                }
            }

            h4 {
                padding: 6px 0 6px 6px;
            }
        }

        .successes {
            h4 {
                background-color: lighten(#16A316, 50%);
                color: #16A316;
            }
            li {
                background-color: #3d8b3d;
            }
        }

        .warnings {
            h4 {
                background-color: lighten(#F49A03, 50%);
                color: #F49A03;
            }
            li {
                background-color: #b87400;
            }
        }

        .errors {
            h4 {
                background-color: lighten(#F21313, 43%);
                color: #F21313;
            }
            li {
                background-color: #b81a1a;
            }
        }
    }
}

